# crossarena

./: .gitignore  Cargo.toml  TechDoc.md
project/: project.godot
project/.import/: charged_projectile.svg-7eb75d2c8d54b24987bb29bf70fb48a8.md5  chargedprojectile.png-df78c038e6b4da61451c064979aab8a8.md5  projectile.png-5d354e581635243a4a9ec9e4bc251911.stex  projectile.svg-a0571a1558edbf6bbbc1113240034c07.stex
project/enemies/ranged/: invisible.tres  ranged.gdns  ranged.tscn  ranged_drops.json
project/enemies/simple/: simple.gdns  simple.tscn
project/forge/: forge.gdns  forge.tscn
project/lib/: core.tres  libcrossarena.d
project/player/: attack.gdns  beam_gradient_charged.tres  left_aim_beam_normal.tres  player.gdns  player.tscn  right_aim_beam_charged.tres  right_aim_beam_normal.tres
project/projectile/charged/: charged_projectile.gdns  charged_projectile.png.import  charged_projectile.svg.import  charged_projectile.tscn
project/projectile/enemy/: projectile.png.import  projectile.svg.import  projectile.tscn
project/projectile/normal/: projectile.gdns  projectile.png.import  projectile.svg.import  projectile.tscn
project/roots/arena/: Crafting.gdns  HUD.gdns  Inventory.gdns  UI.gdns  arena.gdns  arena.tscn  sidewall.tres
project/roots/end_scene/: end.gdns  end.tscn
project/roots/event/: event_bus.gdns  event_bus.tscn
project/roots/records/: records.gdns  records.tscn
project/switch/: switch.gdns  switch.tscn
src/: arena.rs  attack.rs  conv.rs  crafting.rs  direction.rs  enemy.rs  entity.rs  event_bus.rs  health.rs  lib.rs  player.rs  projectile.rs  records.rs  switch.rs  systems.rs  ui.rs  util.rs
src/arena/: spawn.rs  wave.rs
src/entity/: arena.rs  attack.rs  enemy.rs  forge.rs  player.rs  projectile.rs  switch.rs
src/player/: aim.rs  dash.rs  melee.rs
src/systems/: aim.rs  dash.rs  health.rs  inventory.rs  items.rs  melee.rs
src/ui/: crafting.rs  end.rs  hud.rs  inventory.rs  start.rs
src/util/: common_matrices.rs  error.rs  groups.rs  path_ops.rs
(+2 files in other folders)
